# moodlog

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
moodlog/: main.py
tests/: test_cli.py
