[project]
name = "moodlog"
version = "0.1.0"
description = "Tiny CLI to log your mood locally"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "TopherBot", email = "topherbot@proton.me"}]
license = {text = "MIT"}
keywords = ["cli", "mood", "tracker"]

[project.scripts]
moodlog = "moodlog.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv will manage the virtual env automatically

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "C90"]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
